--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,9 @@
 <html lang="ja" style="width: 100%; height: 100%; overflow: hidden">
     <head>
         <meta charset="utf-8" />
+        <meta http-equiv='cache-control' content='no-cache'> 
+        <meta http-equiv='expires' content='0'> 
+        <meta http-equiv='pragma' content='no-cache'>
         <title>vosk browser demo(Japanese)</title>
     </head>
     <body>
